--- a/iMessage/Base.lproj/Main.storyboard
+++ b/iMessage/Base.lproj/Main.storyboard
@@ -119,7 +119,7 @@
                                 <connections>
                                     <outlet property="captionLbl" destination="QNc-Az-9ot" id="H0L-95-JEa"/>
                                     <outlet property="thumbnailPhoto" destination="DL3-FP-EGa" id="QYf-gQ-05x"/>
-                                    <segue destination="act-Ql-vC3" kind="push" id="fTz-Pk-KV5"/>
+                                    <segue destination="act-Ql-vC3" kind="push" identifier="ChatSegue" id="fTz-Pk-KV5"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -161,7 +161,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="528"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="85" id="vWn-Oi-dHU">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MessageCellYou" rowHeight="85" id="vWn-Oi-dHU" customClass="ChatTableViewCell" customModule="iMessage" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="92" width="320" height="85"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vWn-Oi-dHU" id="lin-s1-Sqs">
@@ -173,6 +173,14 @@
                                                 </imageView>
                                                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pWX-oO-w6M">
                                                     <rect key="frame" x="73" y="5" width="180" height="74"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fsQ-pP-CGP">
+                                                            <rect key="frame" x="8" y="8" width="164" height="35"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
                                                     <color key="backgroundColor" red="0.31372549019607843" green="0.43529411764705883" blue="0.55686274509803924" alpha="1" colorSpace="calibratedRGB"/>
                                                 </view>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="chatBubbler.png" translatesAutoresizingMaskIntoConstraints="NO" id="K6D-ZX-NKh">
@@ -180,8 +188,12 @@
                                                 </imageView>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="messageTextLabel" destination="fsQ-pP-CGP" id="WQk-jc-mfE"/>
+                                            <outlet property="profileImageView" destination="QTL-8P-aVa" id="fzs-3I-48b"/>
+                                        </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="85" id="HLT-VE-CJ6">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MessageCellMe" rowHeight="85" id="HLT-VE-CJ6" customClass="ChatTableViewCell" customModule="iMessage" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="177" width="320" height="85"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HLT-VE-CJ6" id="utU-aF-nnK">
@@ -193,6 +205,14 @@
                                                 </imageView>
                                                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VbP-iQ-1Yw">
                                                     <rect key="frame" x="60" y="5" width="180" height="74"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="lable" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A1v-d8-p6P">
+                                                            <rect key="frame" x="8" y="8" width="164" height="34"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
                                                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                                 </view>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="chatBubblerOut.png" translatesAutoresizingMaskIntoConstraints="NO" id="aRc-2x-Kb4">
@@ -200,8 +220,16 @@
                                                 </imageView>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="messageTextLabel" destination="A1v-d8-p6P" id="43E-rs-3f2"/>
+                                            <outlet property="profileImageView" destination="Cu6-pN-Url" id="rSL-Ob-caf"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="act-Ql-vC3" id="Z1p-j3-rHz"/>
+                                    <outlet property="delegate" destination="act-Ql-vC3" id="aeY-Qv-v1M"/>
+                                </connections>
                             </tableView>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yHG-dL-mP0">
                                 <rect key="frame" x="0.0" y="528" width="320" height="40"/>
@@ -217,6 +245,9 @@
                                         <state key="normal" title="Send">
                                             <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="SendButtonDidTapped:" destination="act-Ql-vC3" eventType="touchUpInside" id="BoQ-hI-Bmi"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -225,10 +256,14 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Room Chat" id="qHo-hf-jYp"/>
+                    <connections>
+                        <outlet property="chatTextField" destination="esT-qM-PVt" id="up3-xi-6yP"/>
+                        <outlet property="tableView" destination="dTt-Ag-3P2" id="T7s-ZC-7cR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AwH-X1-gfS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="605" y="605"/>
+            <point key="canvasLocation" x="729" y="603"/>
         </scene>
         <!--My Profile-->
         <scene sceneID="ld0-Pa-hga">
